# quill

./: .gitlab-ci.yml  README.md  __init__.py  __share__.py  pyproject.toml  requirements.txt  setup.py  spin.ini
quill/: __init__.py
quill/fold/: __init__.py  ns.py  ns_util.py
quill/manifest/: __init__.py
quill/scan/: README.md  __init__.py  blockelems.py  docelems.py  elems.py  io.py  lever.py  mmd.py  mmd_util.py  structure.py  tokens.py
quill/scan/lever/: blockelems.py  docelems.py  elems.py  node.py  parser.py  structure.py  tokens.py
src/quill/: __init__.py  __share__.py  cyl.ini  spin.ini
src/quill/fold/: README.md  __init__.py  auditing.py  cli.py  distrib_setup.py  git.py  man.py  ns_util.py  site_yaml.py  subdomain.py  yaml_util.py
src/quill/fold/cut/: __init__.py  audit_checking.py  contexts.py  ctx.py  ctx_building.py  cutters.py  datetime_util.py  interface.py  main.py  name_config.py  pymd_engine.py  rules.py  templater.py
src/quill/fold/cut/contexts/: __init__.py  article.py  base.py  (+5 more)
src/quill/fold/wire/: __init__.py  emitters.ini  emitters.py  html_elem_util.py  html_index_util.py  html_page_util.py  html_util.py  sinks.py  transforms.py  wiring.py
src/quill/manifest/: README.md  __init__.py  man.py  namings.py  parsing.py
src/quill/scan/: README.md  __init__.py  io.py
src/quill/scan/address/: __init__.py  addresses.py  paths.py  routing.py
src/quill/scan/addressing/: __init__.py  addresses.py
src/quill/scan/lever/: __init__.py  blockelems.py  docelems.py  elems.py  git.py  lists.py  mmd.py  parser.py  structure.py  tokens.py
